<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_camp"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/events_near_me" />
        <item

            android:id="@+id/nav_policies"
            android:icon="@drawable/ic_policies"

            android:title="@string/schemes_for_you" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_policies"
            android:title="Join us"/>

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_contact" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_posts"
                android:icon="@drawable/ic_menu_share"
                android:title="Posts" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
