<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.kamps.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.kamps.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <activity
        android:id="@+id/nav_login"
        android:label="Login"
        android:name="com.example.kamps.LoginActivity"/>

    <fragment
        android:id="@+id/nav_camp"
        android:name="com.example.kamps.ui.slideshow.SlideshowFragment"
        android:label="Events Near Me"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_camp_to_camp_details"
            app:destination="@id/camp_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_policies"
        android:name="com.example.kamps.ui.policies.PoliciesFragment"
        android:label="Schemes for you"
        tools:layout="@layout/fragment_policies" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.kamps.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.kamps.ui.RegisterNGO.LoginFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/camp_details"
        android:name="com.example.kamps.ui.slideshow.camp_details"
        android:label="fragment_camp_details"
        tools:layout="@layout/fragment_camp_details" />
</navigation>